--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,29 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform= org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Regina
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Multipart upload limits
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=15MB
+
+# Upload folder path (relative to project root or absolute)
+app.file.upload-dir=uploads
+
+
+#Logging parameter
+logging.file.name=logs/application.log
+logging.file.max-size=10MB
+logging.file.max-history=7
+logging.level.root=ERROR
+logging.level.org.springframework.boot=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+logging.level.org.hibernate=ERROR
+logging.level.org.apache.tomcat=ERROR
+logging.level.org.springframework.boot.web.embedded.tomcat=ERROR
+spring.main.banner-mode=off
+management.tracing.enabled=false
+spring.jpa.open-in-view=false
+
